Added Database Querying for all routes
